--- a/style.css
+++ b/style.css
@@ -28,10 +28,33 @@ button {
 }
 
 #list {
-  margin: 10px;
+  margin: 20px;
   border: 1px solid #333;
   background: rgba(255, 255, 255, 0.75);
-  padding: 15px 20px 18px 18px;
+  padding: 15px 30px 18px 18px;
   border-radius: 5px;
-  box-shadow: 2px 5px 5px #333;
+  box-shadow: 5px 5px 5px #333;
+  
 }
+li {
+  list-style-type: none;
+  text-align: left;
+  
+}
+.buttons {
+    margin-left: 20px;
+}
+
+.buttons {
+  background: pink;
+  box-shadow: 2px 1px 10px;
+  border-radius: 50px 20px;
+}
+
+.buttons:hover {
+  background: red;
+  border: none;
+   border-radius: 50px 20px;
+}
+
+
